# eumetsat-downloader

./: .gitignore  README.md  requirements.txt  setup.cfg
eumetsat/: download.py  requirements.txt  runner.sh
samples/: tensorstore_reader.py
scripts/: download.py  pngs_to_meta.py  pngs_to_numpy.py  pngs_to_tensorstore.py  pngs_to_tfdata.py
src/eumetsat/: __init__.py  utils.py
src/eumetsat/datasets/: __init__.py  abc_dataset.py  npimg.py  numpy_dataset.py  tensorstore_dataset.py  utils.py
test/datasets/: test_EMTensorstoreDataset.py  test_utils.py
test/eumetsat_tests/: test_utils.py
test/eumetsat_tests/datasets/: test_EMTensorstoreDataset.py  test_utils.py
