[metadata]
name = eumetsat-downloader
version = 0.1.0
description = AI
author = Tim Cargan
Licence = None
platforms = unix, linux, osx, cygwin, win32
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[options]
packages =
    eumetsat
install_requires =
    setuptools
    pandas
    requests
    pandas
    pyarrow
    python-snappy
    pillow
    haversine
    pyproj
    satpy
    pyresample
    hemera @ git+https://github.com/TimCargan/hemera.git
python_requires = >=3.9
package_dir =
    =src
zip_safe = no