[metadata]
name = eumetsat
version = 0.1.0
description = EUMETSAT utils for downloading and dealing with the data
author = Tim Cargan
Licence = Apache 2.0
platforms = unix, linux, osx, cygwin, win32
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[options]
packages =
    eumetsat
install_requires =
    setuptools
    pandas
    requests
    pandas
    pyarrow
    pillow
    haversine
    pyproj
    satpy
    pyresample
    hemera @ git+https://github.com/TimCargan/hemera.git
python_requires = >=3.9
package_dir =
    =src
zip_safe = no